--- a/public/404.html
+++ b/public/404.html
@@ -4,64 +4,112 @@
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
+  @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,400italic,700);
+  @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
   body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
+    background-color: #f8f8f8;
+    color: #676767;
     text-align: center;
-    font-family: arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
   }
 
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  div.container {
+    width: 70%;
+    margin: 0 auto;
   }
 
   h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
+    color: #555;
+    font-family: 'Roboto Slab', serif;
+    font-size: 44px;
+    margin-top: 40px;
+    margin-bottom:  20px;
   }
 
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  p {
+    font-size: 21px;
+    margin-bottom: 20px;
+    font-weight: 300;
+    line-height: 1.4
   }
+
+  video {
+    width: 70%;
+  }
+
+  .cakedrop {
+    display: none;
+  }
+
+  @media (max-width: 990px) {
+    div.container {
+      width: 90%;
+    }
+
+    video {
+      display: none;
+    }
+
+    .cakedrop {
+      display: block;
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 767px) {
+    div.container {
+      width: 95%;
+    }
+
+    h1 {
+      font-size: 34px;
+      margin-top: 40px;
+      margin-bottom:  20px;
+    }
+
+    p {
+      font-size: 18px;
+      margin-bottom: 20px;
+      font-weight: 300;
+      line-height: 1.4
+    }
+  }
+
+  @media (max-width: 767px) {
+    video {
+      width: 100%;
+    }
+
+    h1 {
+      font-size: 24px;
+      margin-top: 20px;
+    }
+
+    p {
+      font-size: 16px;
+    }
+  }
+
   </style>
 </head>
 
 <body>
   <!-- This file lives in public/404.html -->
-  <div class="dialog">
+  <div class="container">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
+      <h1>Ooof! The page you were looking for doesn't exist.</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+
+    <video autoplay="autoplay" loop="loop" muted="muted" id="video-bg-video">
+        <source src="/assets/cakedrop.mp4" type="video/mp4"></source>
+        <source src="/assets/cakedrop.webm" type="video/webm"></source>
+    </video>
+
+
+    <img class="cakedrop" src="/assets/cakedrop.gif">
   </div>
+
 </body>
 </html>
