adding favicon to 404 page

--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
+
   <style>
   @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,400italic,700);
   @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
